# chinese-finnish-learning-app

./: .gitignore  README.md  app.json  package-lock.json  package.json  pyproject.toml  requirements-tts.txt  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jalagus/finnishlearningforchinese/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: _layout.tsx  dictionary.tsx  explore.tsx  home.tsx  index.tsx  learn.tsx  onboarding.tsx  progress.tsx  stories.tsx
app/story/: [id].tsx
assets/audio/: manifest.json
ios/: Podfile
ios/FinnishLearningforChinese/: Info.plist
ios/FinnishLearningforChinese.xcodeproj/: project.pbxproj
ios/FinnishLearningforChinese.xcodeproj/xcshareddata/xcschemes/: FinnishLearningforChinese.xcscheme
ios/FinnishLearningforChinese.xcworkspace/: contents.xcworkspacedata
scripts/: build_audio_asset_manifest.py  convert_audio_to_mp3.py  generate_all_finnish_audio.py  generate_finnish_tts.py
src/components/: AppLoadingScreen.tsx  AudioPlayButton.tsx  BottomNav.tsx  PrimaryButton.tsx  Screen.tsx  StatChip.tsx
src/data/: audioManifest.ts  persistence.ts  seed.ts
src/domain/: types.ts
src/features/review/: reviewEngine.ts
src/providers/: AppProvider.tsx
src/screens/: DictionaryScreen.tsx  ExploreScreen.tsx  HomeScreen.tsx  LearnScreen.tsx  OnboardingScreen.tsx  ProgressScreen.tsx  StoriesScreen.tsx  StoryReaderScreen.tsx
src/theme/: theme.ts
